<resources>
    <string name="app_name">FeelFlow</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_calendar">Calendário</string>
    <string name="menu_year_in_pixels">Ano em Pixels</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty" />
    <string name="month_default">Mês</string>
    <string name="month_name_january">Janeiro</string>
    <string name="month_name_february">Fevereiro</string>
    <string name="month_name_march">Março</string>
    <string name="month_name_april">Abril</string>
    <string name="month_name_may">Maio</string>
    <string name="month_name_june">Junho</string>
    <string name="month_name_july">Julho</string>
    <string name="month_name_august">Agosto</string>
    <string name="month_name_september">Setembro</string>
    <string name="month_name_october">Outubro</string>
    <string name="month_name_november">Novembro</string>
    <string name="month_name_december">Dezembro</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_card_emotions">Emoções</string>
    <string name="title_card_notes">Anotações</string>
    <string name="title_card_photos">Fotos</string>
    <string name="empty_date">00/00/0000</string>
    <string name="menu_entry_overview">Entrada</string>
    <string name="menu_sign_in">Login</string>
    <string name="field_hint_email">E-mail</string>
    <string name="field_hint_password">Senha</string>
    <string name="button_sign_in">Entrar</string>
    <string name="button_sign_up">Cadastre-se</string>
    <string name="menu_sign_up">Cadastro</string>
    <string name="button_cancel">Cancelar</string>
    <string name="field_hint_username">Nome de Usuário</string>
    <string name="field_hint_confirm_password">Confirme a Senha</string>
    <string name="menu_sing_out">Sair</string>
</resources>