<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/feelflow_navigation"
    android:label="feelflow_navigation"
    app:startDestination="@id/nav_sign_in">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.txpdesenvolvimento.feelflow.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.txpdesenvolvimento.feelflow.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_calendar"
        android:name="com.txpdesenvolvimento.feelflow.ui.calendar.CalendarFragment"
        android:label="@string/menu_calendar"
        tools:layout="@layout/fragment_calendar" >
        <action
            android:id="@+id/action_nav_calendar_to_nav_sign_in"
            app:destination="@id/nav_sign_in"
            app:launchSingleTop="true"
            app:popUpTo="@id/nav_calendar"
            app:popUpToInclusive="true"/>
    </fragment>
    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.txpdesenvolvimento.feelflow.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_entry_overview"
        android:name="com.txpdesenvolvimento.feelflow.ui.entry.EntryOverview"
        android:label="@string/menu_entry_overview"
        tools:layout="@layout/fragment_entry_overview" />
    <fragment
        android:id="@+id/nav_entry_note"
        android:name="com.txpdesenvolvimento.feelflow.EntryNote"
        android:label="Anotação"
        tools:layout="@layout/fragment_entry_note" />
    <fragment
        android:id="@+id/nav_sign_in"
        android:name="com.txpdesenvolvimento.feelflow.SignIn"
        android:label="fragment_sign_in"
        tools:layout="@layout/fragment_sign_in">
        <action
            android:id="@+id/action_nav_sign_in_to_nav_sign_up"
            app:destination="@id/nav_sign_up"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_nav_sign_in_to_nav_calendar"
            app:destination="@id/nav_calendar"
            app:launchSingleTop="true"
            app:popUpTo="@id/nav_sign_in"
            app:popUpToInclusive="true">
        </action>
    </fragment>
    <fragment
        android:id="@+id/nav_sign_up"
        android:name="com.txpdesenvolvimento.feelflow.SignUp"
        android:label="fragment_sign_up"
        tools:layout="@layout/fragment_sign_up">
        <action
            android:id="@+id/action_nav_sign_up_to_nav_sign_in"
            app:destination="@id/nav_sign_in"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:launchSingleTop="true"
            app:popUpTo="@id/nav_sign_up"
            app:popUpToInclusive="true"/>
    </fragment>
</navigation>