<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_sign_in"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/background_card"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/edtTxt_email_login"
            android:theme="@style/Theme.FeelFlow.TextViewWithCustomColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:backgroundTint="@color/button_primary"
            android:ems="10"
            android:hint="@string/field_hint_email"
            android:inputType="text"
            android:text="@string/empty"
            android:textColor="@android:color/primary_text_dark"
            android:textColorHighlight="@color/button_primary"
            android:textColorHint="@android:color/secondary_text_dark"
            android:textColorLink="@color/button_primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtVTitle"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/edtTxt_password_login"
            android:theme="@style/Theme.FeelFlow.TextViewWithCustomColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/button_primary"
            android:ems="10"
            android:hint="@string/field_hint_password"
            android:inputType="textPassword"
            android:textColor="@android:color/primary_text_dark"
            android:textColorHighlight="@color/button_primary"
            android:textColorHint="@android:color/secondary_text_dark"
            android:textColorLink="@color/button_primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtTxt_email_login"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/txtVTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/menu_sign_in"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@android:color/primary_text_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:divider="@drawable/divider_horizontal_16dp"
            android:dividerPadding="16dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:showDividers="middle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtTxt_password_login">

            <Button
                android:id="@+id/btn_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/button_primary"
                android:text="@string/button_sign_up" />

            <Button
                android:id="@+id/btn_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/button_primary"
                android:text="@string/button_sign_in" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>